fixed z-index

--- a/station-extension/src/extension/modules/Welcome.module.scss
+++ b/station-extension/src/extension/modules/Welcome.module.scss
@@ -17,7 +17,6 @@
   }
 
   .welcome {
-    z-index: 1;
     margin-top: 4rem;
 
     .title {
@@ -32,6 +31,13 @@
       color: var(--token-light-100);
     }
   }
+
+  .top__content__wrapper {
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+  }
+
 
   .connect__options {
     display: flex;
